--- a/src/index.ejs
+++ b/src/index.ejs
@@ -44,9 +44,9 @@
 			href="./assets/icons/icons-512.png"
 		/>
 
-		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+		<!-- <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /> -->
 
-		<title>Happy Birthday Orly</title>
+		<title>:)</title>
 	</head>
 	<body>
 		<style>
@@ -287,10 +287,10 @@
 			Created by
 			<a
 				class="profile-link"
-				href="https://www.linkedin.com/in/alex-zinkevych"
+				href="http://github.com/fandilladp"
 				target="_blank"
 			>
-				Alex Zinkevych
+				fandilladp
 			</a>
 		</div>
 
@@ -301,12 +301,12 @@
 			style="display:none"
 		></iframe>
 		<audio id="player">
-			<source id="player-src" src="assets/audio/breezin.ogg" type="audio/ogg" />
+			<source id="player-src" src="assets/audio/tester3.ogg" type="audio/ogg" />
 			Your browser does not support the audio element.
 		</audio>
 		<ul id="playlist">
-			<li data-src="assets/audio/sandoval.ogg"></li>
-			<li data-src="assets/audio/maria.ogg"></li>
+			<li data-src="assets/audio/tester3.ogg"></li>
+			<li data-src="assets/audio/tester3.ogg"></li>
 		</ul>
 
 		<% if(htmlWebpackPlugin.options.options.env === 'production'){ %>
